k8s-script/frontendservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: frontend-service
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: frontend-service
spec:
  selector:
    matchLabels:
      app: frontend-service
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
      - image: {$AWS_ACCOUNT_ID}.dkr.ecr.us-east-2.amazonaws.com/cloud-develop-demo-frontend-service
        name: cloud-develop-demo-frontend-service
        ports:
        - containerPort: 80
        readinessProbe:
          initialDelaySeconds: 20
          periodSeconds: 5
          successThreshold: 2
          httpGet:
             path: /
             port: 80
      imagePullSecrets:
      - name: regcred
