k8s-script/orderservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  type: ClusterIP
  ports:
  - port: 9001
    protocol: TCP
  selector:
    app: order-service
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: order-service
spec:
  selector:
    matchLabels:
      app: order-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - image: {$AWS_ACCOUNT_ID}.dkr.ecr.us-east-2.amazonaws.com/cloud-develop-demo-order-service
        name: cloud-develop-demo-order-service
        ports:
        - containerPort: 9001
        readinessProbe:
          initialDelaySeconds: 20
          periodSeconds: 5
          successThreshold: 2
          httpGet:
             path: /api/v1/orders
             port: 9001
      imagePullSecrets:
      - name: regcred
