k8s-script/productservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  type: ClusterIP
  ports:
  - port: 9002
    protocol: TCP
  selector:
    app: product-service
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: product-service
spec:
  selector:
    matchLabels:
      app: product-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: product-service
    spec:
      #nodeSelector:
      #  nodemaster: master
      #tolerations:
      #- key: nodemaster
      #  operator: Equal
      #  value: master
      #  effect: NoSchedule
      containers:
      - image: {$AWS_ACCOUNT_ID}.dkr.ecr.us-east-2.amazonaws.com/cloud-develop-demo-product-service
        name: cloud-develop-demo-product-service
        ports:
        - containerPort: 9002
        readinessProbe:
          initialDelaySeconds: 20
          periodSeconds: 5
          successThreshold: 2
          httpGet:
             path: /api/v1/products
             port: 9002
      imagePullSecrets:
      - name: regcred
