k8s-script/ingress-frontend.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  -  http:
      paths:
        #- path: /demo/productservice/(.+)
        #  backend:
        #    serviceName: product-service
        #    servicePort: 9002
        #- path: /demo/orderservice/(.+)
        #  backend:
        #    serviceName: order-service
        #    servicePort: 9001
        - path: /(.+)
          backend:
            serviceName: frontend-service
            servicePort: 80
